--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
-    <string name="app_name">MyCalculator</string>
+    <string name="app_name">Calculator</string>
+    <string name="calc_text">1234567</string>
+    <string name="_7">7</string>
+    <string name="_8">8</string>
+    <string name="_9">9</string>
+    <string name="Divide">/</string>
 </resources>
